--- a/FYP_Management_System/FYP_Management_System.csproj
+++ b/FYP_Management_System/FYP_Management_System.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GroupStudentCRUD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GroupStudentCRUD.Designer.cs">
+      <DependentUpon>GroupStudentCRUD.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GroupStudentCRUD.resx">
+      <DependentUpon>GroupStudentCRUD.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
